--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{google-map lat=lat lng=lng type=type zoom=zoom markers=markers}}
+{{google-map lat=lat lng=lng type=type zoom=zoom markers=markers infoWindows=infoWindows}}
 
 <div>
   <label>Lat: {{input value=lat}}</label>
