Updating readme and example

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,5 @@
+<h1>Dead simple example of using <a href="https://github.com/huafu/ember-google-map">ember-google-map</a></h1>
+
 {{google-map lat=lat lng=lng type=type zoom=zoom markers=markers infoWindows=infoWindows}}
 
 <h3>Map settings</h3>
