--- a/assets/dummy.css
+++ b/assets/dummy.css
@@ -2,6 +2,8 @@ html, body {
   margin: 20px;
 }
 div.map-canvas {
-  width: 100%;
-  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 700px;
+  height: 400px;
 }
