--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -1,9 +1,30 @@
 html, body {
   margin: 20px;
+  background-color: #eee;
 }
+
+.social-networks-bar {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 div.map-canvas {
   margin-left: auto;
   margin-right: auto;
   width: 700px;
   height: 400px;
+}
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+ul > li {
+  list-style: none;
+  margin: 2px;
+  padding: 2px;
+  border-bottom: 1px solid #ccc;
+}
+input.coord {
+  width: 60px;
 }
