Using dynamic views

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -4,7 +4,7 @@
 
 {{google-map
     lat=lat lng=lng type=type zoom=zoom markers=markers
-    infoWindows=infoWindows infoWindowTemplateName='marker-info-window'
+    infoWindows=infoWindows markerInfoWindowTemplateName='marker-info-window'
     gopt_mapTypeControl=false gopt_backgroundColor='transparent'}}
 
 <h3>Map settings</h3>
