--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -1,7 +1,7 @@
 <div class="map-canvas"></div>
 <div class="markers" style="display: none;">
   <ul>
-    {{#each _markers itemView='google-map/marker'}}
+    {{#each _markers itemView=markerViewClass}}
       <li>{{title}} @ {{lat}},{{lng}}</li>
       {{#if view.hasInfoWindow}}
         {{view 'google-map/info-window'}}
@@ -9,6 +9,6 @@
     {{/each}}
   </ul>
   <ul>
-    {{each _infoWindows itemView='google-map/info-window'}}
+    {{each _infoWindows itemView=infoWindowViewClass}}
   </ul>
 </div>
