[FEAT] Added circles feature

--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -14,4 +14,7 @@
   <ul>
     {{each _polylines itemView=polylineViewClass}}
   </ul>
+  <ul>
+    {{each _circles itemView=circleViewClass}}
+  </ul>
 </div>
