--- a/tests/dummy/app/templates/marker-info-window.hbs
+++ b/tests/dummy/app/templates/marker-info-window.hbs
@@ -1,6 +1,9 @@
-<h2>I am marker {{title}}</h2>
-<div>
-  I have latitude <code>{{lat}}</code>
-  and longitude <code>{{lng}}</code>.
+<div class="marker-info-window">
+  <h2>I am marker {{title}}</h2>
+
+  <div>
+    <div>my latitude: <code>{{lat}}</code></div>
+    <div>my longitude: <code>{{lng}}</code></div>
+  </div>
+  <h4>{{helloWorld}}</h4>
 </div>
-<h4>{{helloWorld}}</h4>
