Removed deprecated {{each}}

--- a/app/templates/google-map/polyline.hbs
+++ b/app/templates/google-map/polyline.hbs
@@ -1,5 +1,5 @@
 <ul>
-  {{#each _path}}
-    <li>{{lat}},{{lng}}</li>
+  {{#each point in _path}}
+    <li>{{point.lat}},{{point.lng}}</li>
   {{/each}}
 </ul>
