[FEATURE] Implementing polygons (closes #11)

--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -17,6 +17,9 @@
     {{each polyline in _polylines itemViewClass=polylineViewClass}}
   </ul>
   <ul>
+    {{each polygon in _polygons itemViewClass=polygonViewClass}}
+  </ul>
+  <ul>
     {{each circle in _circles itemViewClass=circleViewClass}}
   </ul>
 </div>
