[FEATURE] `autoFitBounds` and `fitBoundsArray` + many fixes

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -7,7 +7,8 @@
   lat=lat lng=lng type=type zoom=zoom markers=markers
   infoWindows=infoWindows markerInfoWindowTemplateName='marker-info-window'
   polylines=polylines polygons=polygons circles=circles
-  gopt_mapTypeControl=false gopt_backgroundColor='transparent'}}
+  gopt_mapTypeControl=false gopt_backgroundColor='transparent'
+  autoFitBounds=true}}
 
 <h3>Map settings</h3>
 <div>
