Fix so that removing poly line works in demo app

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -65,7 +65,7 @@
             <li>
               <label>lat/lng: {{input value=entry.lat class='coord'}}
                 /{{input value=entry.lng class='coord'}}</label>
-              <button {{action 'removePolylinePathItem' path entry}}>x</button>
+              <button {{action 'removePolylinePathItem' polyline.path entry}}>x</button>
             </li>
           {{/each}}
         </ul>
