--- a/app/templates/google-map/info-window.hbs
+++ b/app/templates/google-map/info-window.hbs
@@ -1,3 +1,3 @@
-<h3>{{title}}</h3>
+<h3 style="margin-top: 0;">{{title}}</h3>
 
-<p>{{description}}</p>
+<p style="margin-bottom: 0;">{{description}}</p>
