--- a/tests/dummy/app/templates/marker-info-window.hbs
+++ b/tests/dummy/app/templates/marker-info-window.hbs
@@ -5,5 +5,5 @@
     <div>my latitude: <code>{{lat}}</code></div>
     <div>my longitude: <code>{{lng}}</code></div>
   </div>
-  <h4>{{helloWorld}}</h4>
+  <h4>{{description}}</h4>
 </div>
