[MISC] Updating test tempalte

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -10,9 +10,9 @@
     polylines=polylines polygons=polygons
     circles=circles
     gopt_mapTypeControl=false gopt_backgroundColor='transparent'
-    autoFitBounds=false}}
+    autoFitBounds=true}}
   {{google-street-view isVisible=streetView.isVisible lat=streetView.lat lng=streetView.lng
-      heading=streetView.heading pitch=streetView.pitch}}
+      heading=streetView.heading pitch=streetView.pitch closeButton=false}}
 {{/google-map}}
 
 <h3>Map settings</h3>
