[DEMO] Added code to show how to define and handle events simplu

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -8,7 +8,7 @@
   infoWindows=infoWindows markerInfoWindowTemplateName='marker-info-window'
   polylines=polylines polygons=polygons circles=circles
   gopt_mapTypeControl=false gopt_backgroundColor='transparent'
-  autoFitBounds=true}}
+  autoFitBounds=true ev_click='didClickMap'}}
 
 <h3>Map settings</h3>
 <div>
