fixing the circle radius binding in the included example app

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -108,7 +108,7 @@
       <li>
         <label>center lat/lng: {{input value=circle.lat class='coord'}}
           /{{input value=circle.lng class='coord'}}</label>
-        <label>radius: {{input value=radius class='coord'}}</label>
+        <label>radius: {{input value=circle.radius class='coord'}}</label>
         <label>{{input type='checkbox' checked=circle.isVisible}}visible</label> |
         <label>{{input type='checkbox' checked=circle.isDraggable}}draggable</label> |
         <label>{{input type='checkbox' checked=circle.isEditable}}editable</label>
